tests/negative/semantic/for_in_not_iterable/input.ci
void main() {
    int x = 42;
    for (int i in x) {
        print(toString(i) + "\n");
    }
}
